--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     command: ['bundle', 'exec', 'rails', 's', '-p', '3000', '-b', '0.0.0.0']
     #command: ['sh', '-c', 'while true; do sleep 100; done']
     volumes:
-      - ./src:/myapp
+      - ./src:/app
     ports:
       - "3000:3000"
     depends_on:
