--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - ./tmp/db:/var/lib/postgresql/data
   web:
     build: ./src/.
-    command: ['bundle', 'exec', 'rails', 's', '-p', '3000', '-b', '0.0.0.0']
+    command: sh -c "rm -rf tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     #command: ['sh', '-c', 'while true; do sleep 100; done']
     volumes:
       - ./src:/app
