--- a/src/Gemfile
+++ b/src/Gemfile
@@ -18,7 +18,8 @@ gem 'uglifier', '>= 1.3.0'
 #gem "elasticsearch-rails"
 #gem 'elasticsearch-model', git: 'git://github.com/elastic/elasticsearch-rails.git', branch: '5.x'
 
-gem 'elasticsearch-api', git: 'git://github.com/elasticsearch/elasticsearch-ruby.git'
+#gem 'elasticsearch-api', git: 'git://github.com/elasticsearch/elasticsearch-ruby.git'
+gem 'elasticsearch', '~> 0.4'
 gem 'faraday'
 gem 'pry', '~> 0.10.3'
 
