--- a/src/Gemfile
+++ b/src/Gemfile
@@ -19,9 +19,9 @@ gem 'uglifier', '>= 1.3.0'
 #gem 'elasticsearch-model', git: 'git://github.com/elastic/elasticsearch-rails.git', branch: '5.x'
 
 #gem 'elasticsearch-api', git: 'git://github.com/elasticsearch/elasticsearch-ruby.git'
-gem 'elasticsearch', '~> 0.4'
-gem 'faraday'
+gem 'elasticsearch'
 gem 'pry', '~> 0.10.3'
+gem 'json'
 
 # Use CoffeeScript for .coffee assets and views
 gem 'coffee-rails', '~> 4.2'
